# pharmacy_bot

./: .env.example  .gitignore  ARCHITECTURE_INTEGRATION.md  CLAUDE.md  DATA_INTEGRATION_SPEC.md  DEPLOY.md  FUNCTIONALITY_AND_DATA.txt  README.md  api.py  bot.py  check_sheets.py  create_app_user.py  dashboard_sync.py  database.py  deploy_frontend.sh  dwh.py  dwh_demo_388.py  dwh_probe.py  dwh_sync.py  inspect_excel.py  managers_geo.py  payments_import.py  plans_loader.py  plans_sync.py  projects_catalog.py  pyproject.toml  run_api_local.py  screenshot.py  seed_clients.py  seed_test_pharmacies.py  sync.py  test_parse_excel.py
mobile/: .gitignore  capacitor.config.json  package-lock.json  package.json
mobile/android/app/: build.gradle
mobile/android/app/src/main/java/com/fom/datfo/: MainActivity.java
mobile/android/app/src/main/res/values/: strings.xml
webapp/: app.js  config.js  index.html  preview.html  preview_new.html
