[project]
name = "datfo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiogram>=3.22.0",
    "asyncpg>=0.31.0",
    "google-auth>=2.50.0",
    "gspread>=6.2.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "openpyxl>=3.1.0",
    "selenium>=4.20.0",
    "webdriver-manager>=4.0.0",
    "Pillow>=10.0.0",
    "aiohttp-cors>=0.7.0",
    "anthropic>=0.40.0",
]
